--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -6,13 +6,20 @@
     padding: 0;
 }
 
+:root {
+    --main-color: #7050E5;
+    --white-color: #ffffff;
+    --dark-color: #878787;
+    --accent-color: #FF8B00;
+}
+
 @import "base/variables";
 @import "base/mixins";
 @import "base/fonts";
 @import "base/animations";
 
 @import "blocks/header";
-@import "blocks/promo";
+@import "blocks/hero";
 @import "blocks/footer";
 @import "blocks/buttons";
 
@@ -26,13 +33,24 @@ body {
     margin: 0;
     display: flex;
     flex-direction: column;
-    // background: #F8F8F8;
+    background: var(--white-color);
     font-family: "Proxima Nova", sans-serif;
-    color: $dark-color;
+    color: var(--main-color);
     font-size: 14px;
     width: 100%;
     height: 100%;
 }
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    border: 0;
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+  }
 
 .main-container {
     flex-grow: 1;
