--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -1,4 +1,20 @@
 .header {
-    background: var(--main-color);
+    position: relative;
+    z-index: 1;
+    background: none;
+    &__wrap {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        align-items: center;    
+        padding: 28px;
+    }
+    &__logo img{
+        width: 39px;
+        height: 50px;
+    }
+    &__nav {
+        display: none;
+    }
 }
 
