--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -20,6 +20,8 @@
 
 @import "blocks/header";
 @import "blocks/hero";
+@import "blocks/stats";
+@import "blocks/service";
 @import "blocks/footer";
 @import "blocks/buttons";
 
@@ -30,15 +32,16 @@ html {
 }
 
 body {
-    margin: 0;
     display: flex;
     flex-direction: column;
-    background: var(--white-color);
+    width: 100%;
+    height: 100%;
+    margin: 0;
     font-family: "Proxima Nova", sans-serif;
     color: var(--main-color);
     font-size: 14px;
-    width: 100%;
-    height: 100%;
+    font-weight: 400;
+    background: var(--white-color);
 }
 
 .visually-hidden {
@@ -58,7 +61,7 @@ body {
 
 .container {
     max-width: 1570px;
-    padding: 0 15px;
+    // padding: 0 15px;
     margin: 0 auto;    
 }
 
