--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -22,6 +22,8 @@
 @import "blocks/hero";
 @import "blocks/stats";
 @import "blocks/service";
+@import "blocks/info";
+@import "blocks/application";
 @import "blocks/footer";
 @import "blocks/buttons";
 
