--- a/src/sass/blocks/_footer.scss
+++ b/src/sass/blocks/_footer.scss
@@ -1,13 +1,63 @@
 .footer {
     background: #363636;
     &__wrap {
-        padding: 60px 38px 80px;
+        padding: 60px 38px 80px 38px;
+    }
+    &__menu {
+        position: relative;
+        padding: 0 12px 180px 12px; 
+        &::before {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 88px;
+            height: 100px;
+            background-image: url("../../icons/emblem.svg");
+            background-repeat: no-repeat;
+            background-size: cover;
+        }        
+    }
+    &__nav {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 52px;
+        margin-bottom: 48px;
+    }
+    &__bottom {
+        padding: 37px 41px 38px 38px;
+        display: flex;
+
+        color: #FFF;
+        font-family: Raleway;
+        font-size: 8px;
+        font-weight: 500;
+        line-height: 20px;
+        text-transform: uppercase;
+        background: #252525;
+        &-right {
+            position: relative;
+            padding-left: 8px;
+            &::before {
+                content: '';
+                position: absolute;
+                left: 2px;
+                top: 6px;  
+                width: 100%;
+                height: 100%;  
+                background-image: url("../../icons/hexagon.svg");
+                background-repeat: no-repeat;
+                background-size: 6px 8px;
+            }
+        }
     }
 }
 
 .news {
     display: flex;
     flex-wrap: wrap;
+    margin-bottom: 60px;
     &__header {
         display: flex;
         align-items: center;
@@ -63,4 +113,75 @@
         letter-spacing: -0.11px;
     }  
 }
+
+.nav,
+.contact {
+    &__wrap {
+        display: flex;
+        flex-direction: column;
+        width: 110px;
+    }
+    &__title {
+        position: relative;
+        padding-left: 26px;
+        margin-bottom: 12px;
+        color: var(--accent-color);
+        font-size: 14px;
+        font-weight: 700;
+        line-height: 20px;
+        text-transform: uppercase;
+        &::before {
+            content: '';
+            position: absolute;
+            left: 0;
+            top: 0;       
+            width: 18px;
+            height: 20px;        
+            background-image: url("../../icons/hexagon.svg");
+            background-repeat: no-repeat;
+        }
+    }
+    &__list {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        gap: 6px;
+    }
+    &__link {
+        color: var(--white-color);
+        font-weight: 600;
+        line-height: 18px;
+        text-transform: uppercase;
+    }
+}
+
+.contact {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 210px;
+    margin: 0 auto;
+    &__title {
+        margin-bottom: 21px;        
+    }
+    &__list {
+        gap: 7px;
+    }    
+    &__item {
+        display: flex;
+        gap: 15px;
+    }
+    &__text {
+        color: var(--white-color);
+        font-weight: 600;
+        line-height: 18px;
+        text-transform: uppercase;
+    }
+    &__link {
+        line-height: 18px;
+        text-transform: lowercase;
+    }
+}
+
+
 
