--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -14,7 +14,19 @@
         height: 50px;
     }
     &__nav {
-        display: none;
+        position: absolute;
+        right: 0;
+        top: -310%;
+        display: block;
+        padding: 32px 60px;
+        background: var(--accent-color);
+        transition: 0.6s all;
+        .nav__list {
+            gap: 30px;
+        }
+        &-active {
+            top: 0;
+        }
     }
 }
 
