--- a/src/sass/blocks/_hero.scss
+++ b/src/sass/blocks/_hero.scss
@@ -21,14 +21,20 @@
         background-position: bottom;   
     }  
     &__wrap {
+        display: flex;
+        flex-direction: column;
+        padding: 133px 28px 53px 28px;     
+    }
+    &__text {
         position: relative;
         display: flex;
         flex-direction: column;
-        padding: 282px 28px 53px 28px;
+        padding-top: 149px;
+        width: 315px;
         &::before {
             content: '';
             position: absolute;
-            top: 132px;
+            top: 0px;
             left: 50%;
             transform: translateX(-50%);
             width: 100px;
@@ -36,11 +42,7 @@
             background-image: url("../../icons/twitter.svg");
             background-repeat: no-repeat;
             background-size: cover;
-        }        
-    }
-    &__text {
-        display: flex;
-        flex-direction: column;
+        }   
     }
     &__title {
         margin-bottom: 16px;
@@ -65,6 +67,16 @@
         font-weight: 700;
         line-height: 20px;
 
+    }
+}
+
+.swiper {
+    width: 100%;
+    &-pagination {
+        display: none;
+    }
+    &-scrollbar {
+        display: none;
     }
 }
 
