--- a/src/sass/blocks/_info.scss
+++ b/src/sass/blocks/_info.scss
@@ -18,8 +18,76 @@
         letter-spacing: -0.3px;
     }
     &__video {
-        margin-bottom: 40px;
         width: 319px;
         height: 196px;
     }
+    &__play {
+        position: relative;
+        margin-bottom: 40px;
+    }
+    &__picture {
+        position: relative;
+        &-over {
+            position: absolute;
+            bottom: 28px;
+            left: 50%;
+            transform: translateX(-50%);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            width: 180px;
+
+            color: var(--white-color);
+            font-family: Raleway;
+            font-size: 13px;
+            font-weight: 800;
+            line-height: 22px;
+            text-transform: uppercase;
+       }
+    }
+    &__icon {
+        margin-bottom: 15px;
+    }
+    &__feature {
+        font-size: 10px;
+        font-weight: 600;
+        line-height: 14px;
+    }
+
 }
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+  }
+  
+  .modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+  }
+  
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
