--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -44,6 +44,7 @@ body {
     font-size: 14px;
     font-weight: 400;
     background: var(--white-color);
+    scroll-behavior: smooth;
 }
 
 .visually-hidden {
