--- a/src/sass/blocks/_application.scss
+++ b/src/sass/blocks/_application.scss
@@ -1,14 +1,14 @@
 .application {
     background: #232323;
     &__wrap {
-        padding: 40px 36px 42px 28px;
+        padding: 2.5rem 2.25rem 2.625rem 1.75rem;
     }
     &__title {
-        margin-bottom: 48px;
+        margin-bottom: 3rem;
         color: var(--white-color);
-        font-size: 34px;
+        font-size: 2.125rem;
         font-weight: 700;
-        line-height: 40px;
+        line-height: 2.5rem;
     }
     &__form {
         display: flex;
@@ -16,46 +16,46 @@
         color: var(--white-color);
     }
     &__form fieldset {
-        margin-bottom: 40px;
+        margin-bottom: 2.5rem;
         border: none;
     }
     &__subtitle {
-        margin-bottom: 38px;
-        margin-left: 4px;
-        font-size: 20px;
+        margin-bottom: 2.375rem;
+        margin-left: .25rem;
+        font-size: 1.25rem;
         font-weight: 700;
-        letter-spacing: -0.533px;
+        letter-spacing: -0.0333rem;
     }
     &__list {
         display: flex;
         flex-direction: column;
-        gap: 30px;
+        gap: 1.875rem;
     }
     &__item {
         display: flex;
         flex-direction: column;
-        gap: 17px;
-        font-size: 13px;
+        gap: 1.0625rem;
+        font-size: .8125rem;
         font-weight: 600;
-        line-height: 1px;
+        line-height: .0625rem;
     }
     &__label {
-        margin-left: 4px;
+        margin-left: .25rem;
     }
     &__input, 
     &__textarea {
-        padding: 10px 13px 11px;
+        padding: .625rem .8125rem .6875rem;
         color: #3D3D3D;
         font-family: Raleway;
-        font-size: 14px;
+        font-size: .875rem;
         font-weight: 500;
-        line-height: 7px; 
+        line-height: .4375rem; 
         border-radius: 8px;
         border: 1px solid #292929;
         background: var(--white-color);
     }
     &__textarea {
-        padding: 15px 13px;
+        padding: .9375rem .8125rem;
         min-height: 96px;
     }
 
