--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -7,10 +7,10 @@
         flex-wrap: wrap;
         justify-content: space-between;
         align-items: center;    
-        padding: 28px;
+        padding: 1.75rem;
     }
     &__logo img{
-        width: 39px;
+        width: 10.4vw;
         height: 50px;
     }
     &__nav {
@@ -18,11 +18,11 @@
         right: 0;
         top: -310%;
         display: block;
-        padding: 32px 60px;
+        padding: 2rem 3.75rem;
         background: var(--accent-color);
         transition: 0.6s all;
         .nav__list {
-            gap: 30px;
+            gap: 1.875rem;
         }
         &-active {
             top: 0;
