--- a/src/sass/blocks/_hero.scss
+++ b/src/sass/blocks/_hero.scss
@@ -23,14 +23,14 @@
     &__wrap {
         display: flex;
         flex-direction: column;
-        padding: 133px 28px 53px 28px;     
+        padding: 8.3125rem 1.75rem 3.3125rem 1.75rem;     
     }
     &__text {
         position: relative;
         display: flex;
         flex-direction: column;
-        padding-top: 149px;
-        width: 315px;
+        padding-top: 9.3125rem;
+        width: 84vw;
         &::before {
             content: '';
             position: absolute;
@@ -38,34 +38,34 @@
             left: 50%;
             transform: translateX(-50%);
             width: 100px;
-            height: 84px;
+            min-height: 84px;
             background-image: url("../../icons/twitter.svg");
             background-repeat: no-repeat;
             background-size: cover;
         }   
     }
     &__title {
-        margin-bottom: 16px;
-        font-size: 32px;
+        margin-bottom: 1rem;
+        font-size: 2rem;
         font-weight: 700;
-        line-height: 40px;
+        line-height: 2.5rem;
     }
     &__descr {
-        margin-bottom: 27px;
-        font-size: 16px;
+        margin-bottom: 1.6875rem;
+        font-size: 1rem;
         font-weight: 600;
-        line-height: 20px;
+        line-height: 1.25rem;
     }
     &__call {
         display: flex;
         flex-direction: column;
         align-items: center;
-        gap: 19px;
+        gap: 1.1875rem;
         margin: 0 auto;
 
-        font-size: 13px;
+        font-size: .8125rem;
         font-weight: 700;
-        line-height: 20px;
+        line-height: 1.25rem;
 
     }
 }
