--- a/src/sass/blocks/_info.scss
+++ b/src/sass/blocks/_info.scss
@@ -2,57 +2,53 @@
     &__wrap {
         display: flex;
         flex-direction: column;
-        padding: 100px 28px 96px 28px;
+        padding: 6.25rem 1.75rem 6rem 1.75rem;
     }
     &__title {
-        margin-bottom: 16px;
-        font-size: 24px;
+        margin-bottom: 1rem;
+        font-size: 1.5rem;
         font-weight: 700;
-        line-height: 32px;
+        line-height: 2rem;
     }
     &__descr {
-        margin-bottom: 30px;
-        width: 295px;
-        font-size: 15px;
-        line-height: 21px;
-        letter-spacing: -0.3px;
-    }
-    &__video {
-        width: 319px;
-        height: 196px;
+        margin-bottom: 1.875rem;
+        width: 78.667vw;
+        font-size: .9375rem;
+        line-height: 1.3125rem;
+        letter-spacing: -0.0187rem;
     }
     &__play {
         position: relative;
-        margin-bottom: 40px;
+        margin-bottom: 2.5rem;
     }
     &__picture {
         position: relative;
         &-over {
             position: absolute;
-            bottom: 28px;
+            bottom: 1.75rem;
             left: 50%;
             transform: translateX(-50%);
             display: flex;
             justify-content: center;
             align-items: center;
             flex-direction: column;
-            width: 180px;
+            width: 48vw;
 
             color: var(--white-color);
             font-family: Raleway;
-            font-size: 13px;
+            font-size: .8125rem;
             font-weight: 800;
-            line-height: 22px;
+            line-height: 1.375rem;
             text-transform: uppercase;
        }
     }
     &__icon {
-        margin-bottom: 15px;
+        margin-bottom: .9375rem;
     }
     &__feature {
-        font-size: 10px;
+        font-size: .625rem;
         font-weight: 600;
-        line-height: 14px;
+        line-height: .875rem;
     }
 
 }
@@ -73,7 +69,7 @@
   .modal-content {
     background-color: #fefefe;
     margin: 15% auto;
-    padding: 20px;
+    padding: 1.25rem;
     border: 1px solid #888;
     width: 80%;
   }
@@ -81,7 +77,7 @@
   .close {
     color: #aaa;
     float: right;
-    font-size: 28px;
+    font-size: 1.75rem;
     font-weight: bold;
   }
   
