--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -16,6 +16,7 @@
         align-self: flex-start;
     }
     &__info {
+        order: 4;
         padding: .875rem 3rem;
         margin: 0 auto;
         line-height: 1.125rem;       
